# stalzone-build-optimizer

./: .gitignore  README.md  practice.py  pyproject.toml  repo-files.txt
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  advisor.py
src/calculator/: __init__.py  artifact_scaling.py  build_calculator.py  constants.py  constraints.py  formulas.py  stat_keys.py
src/downloader/: constants.py  downloader.py  exceptions.py
src/market/: market_client.py  price_repository.py  price_updater.py  rarity.py
src/models/: armor.py  artifact.py  build.py  container.py  game_database.py  price.py
src/optimizer/: filters.py  optimizer.py  priorities.py  scorer.py
src/parser/: database_parser.py  database_sync.py  price_parser.py  wiki_parser.py
src/services/: data_loader.py
src/utils/: file_utils.py  json_utils.py  logger.py
tests/: test_core.py
