[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stalzone-build-optimizer"
version = "0.1.0"
description = "AI-assisted optimizer for STALCRAFT:X artifact builds."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
]

[project.scripts]
stalzone-optimizer = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
